[gd_scene load_steps=9 format=3 uid="uid://gr71mncd48k0"]

[ext_resource type="Script" path="res://scripts/zombie.gd" id="1_2ib2v"]
[ext_resource type="Texture2D" uid="uid://bia3q7c7simcm" path="res://assets/light-texture.webp" id="2_mbuas"]
[ext_resource type="Texture2D" uid="uid://crd6yvjxmeheb" path="res://assets/zombie.svg" id="2_xrgvd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2m1i5"]
radius = 39.0128

[sub_resource type="CircleShape2D" id="CircleShape2D_ab17q"]
radius = 448.492

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xuw56"]
radius = 39.0
height = 92.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c3a4m"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a0mec"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Zombie" type="CharacterBody2D" groups=["zombies"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_2ib2v")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-5.126e-06, 2.38419e-06)
scale = Vector2(0.242, 0.242)
texture = ExtResource("2_xrgvd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2m1i5")

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="NearbyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NearbyArea"]
shape = SubResource("CircleShape2D_ab17q")

[node name="Eyes" type="Node2D" parent="."]

[node name="Eye" type="PointLight2D" parent="Eyes"]
position = Vector2(12, -10)
scale = Vector2(0.7, 0.7)
color = Color(0.741176, 0, 0.0705882, 1)
texture = ExtResource("2_mbuas")
texture_scale = 0.5

[node name="Eye2" type="PointLight2D" parent="Eyes"]
position = Vector2(12, 7)
scale = Vector2(0.7, 0.7)
color = Color(0.741176, 0, 0.0705882, 1)
texture = ExtResource("2_mbuas")
texture_scale = 0.5

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(22, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xuw56")

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[node name="HealthBarContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="HealthBarContainer"]
layout_mode = 0
offset_left = -51.0
offset_top = 41.0
offset_right = 51.0
offset_bottom = 62.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 9
theme_override_styles/background = SubResource("StyleBoxFlat_c3a4m")
theme_override_styles/fill = SubResource("StyleBoxFlat_a0mec")
value = 100.0

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="body_entered" from="NearbyArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="NearbyArea" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
